<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".MainActivity">

    <View
        android:id="@+id/viewHeaderBackground"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@color/color_primary"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_home"
        android:layout_marginTop="14dp"
        android:layout_marginStart="10dp"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/icon_td"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/dashboardTitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/logo_home"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textSubTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="KMMI Project IOT UNY"
        android:textColor="@color/color_background"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/logo_home"
        app:layout_constraintTop_toBottomOf="@id/textTitle"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/color_card_background"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@id/viewHeaderBackground"
        app:layout_constraintTop_toBottomOf="@+id/viewHeaderBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp">

            <TextView
                android:id="@+id/textViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card1Title"
                android:textColor="@color/color_primary_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/layoutSuhu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/layoutFB"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_tmp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/suhuTitle"
                    android:textSize="10sp"
                    android:textColor="@color/color_secondary_text"/>

                <TextView
                    android:id="@+id/labelT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t"
                    android:textSize="16sp"
                    android:textColor="@color/color_primary_text"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutHum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutFB"
                app:layout_constraintTop_toBottomOf="@id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_firebase"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/fbTitle"
                    android:textSize="10sp"
                    android:textColor="@color/color_secondary_text"/>

                <TextView
                    android:id="@+id/labelA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fbStat"
                    android:textSize="16sp"
                    android:textColor="@color/color_primary_text"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutFB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/layoutSuhu"
                app:layout_constraintEnd_toStartOf="@id/layoutHum"
                app:layout_constraintTop_toBottomOf="@id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_hum"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/humTitle"
                    android:textSize="10sp"
                    android:textColor="@color/color_secondary_text"/>

                <TextView
                    android:id="@+id/labelH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h"
                    android:textSize="16sp"
                    android:textColor="@color/color_primary_text"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/dashboard_progressbar"/>
            <include layout="@layout/dashboard_item_1"/>
            <include layout="@layout/dashboard_item_2"/>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/text_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tap to Speak"
        android:textColor="@color/color_primary_text"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/voiceBtn"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/voiceBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:onClick="btnSpeech"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_record"
        android:background="@drawable/voice_shape"/>

</androidx.constraintlayout.widget.ConstraintLayout>