<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/dashboard_item_2"
        app:cardCornerRadius="14dp"
        app:layout_constraintBottom_toTopOf="@id/cardButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:src="@drawable/ic_lamp"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardStatus1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:cardBackgroundColor="@color/color_card_background"
        app:cardCornerRadius="14dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardButton"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/indicatorAC2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/ic_indicator"
                android:tint="@color/ind_red"
                app:layout_constraintEnd_toStartOf="@id/acStat2"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/acStat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acStat2"
                android:textColor="@color/color_primary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/acTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/acTitle2"
                android:textColor="@color/color_primary_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/acStat2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLoc"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_locac"
                android:tint="@color/color_secondary_text"
                app:layout_constraintStart_toStartOf="@id/acTitle"
                app:layout_constraintTop_toBottomOf="@id/acTitle" />

            <TextView
                android:id="@+id/textLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ac2"
                android:textColor="@color/color_secondary_text"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@id/imgLoc"
                app:layout_constraintStart_toEndOf="@id/imgLoc"
                app:layout_constraintTop_toTopOf="@id/imgLoc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:cardBackgroundColor="@color/color_card_background"
        app:cardCornerRadius="14dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/cardStatus1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingTop="0dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAC2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/button_ac"
                android:text="Turn ON"
                android:textColor="@color/white"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>